--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
                 <p class="oldprice">$169.99</p>
             </div>
             <button class="hi">BOOK NOW</button>
+            <div class="ijm">
+                <img src="/img/i.png" width="20px" alt="">
+                <img src="/img/download.png" width="20px" alt="">
+                <img src="/img/download (1).jpg" width="20px" alt="">
+                <img src="/img/download (1).png"width="20px" alt="">
+                <img src="/img/bi.png"width="20px" alt="">
+            </div>
         </div>
     </div>
 </body>
